{
  "version": 4,
  "terraform_version": "0.12.23",
  "serial": 22,
  "lineage": "bde8ff04-a35d-fa05-4555-cf240ea9fa14",
  "resources": [
    {
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-371c874f"
              }
            ],
            "filter": [
              {
                "name": "attachment.vpc-id",
                "values": [
                  "vpc-371c874f"
                ]
              }
            ],
            "id": "igw-a8d31fd1",
            "internet_gateway_id": "igw-a8d31fd1",
            "owner_id": "217408369779"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:217408369779:vpc/vpc-371c874f",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-326d5c58",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-3374e44b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-371c874f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-a38fcbd8",
            "owner_id": "217408369779",
            "state": "available"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:217408369779:vpc/vpc-371c874f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-1df00266",
            "default_route_table_id": "rtb-a38fcbd8",
            "default_security_group_id": "sg-858686de",
            "dhcp_options_id": "dopt-3374e44b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-371c874f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-a38fcbd8",
            "owner_id": "217408369779"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "control_plane",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:217408369779:loadbalancer/udagram-cluster-api-lb",
            "availability_zones": [
              "us-west-2a",
              "us-west-2b",
              "us-west-2c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "udagram-cluster-api-lb-1353231697.us-west-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTPS:6443/healthz",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "udagram-cluster-api-lb",
            "idle_timeout": 600,
            "instances": [
              "i-097f99b2e1981877a",
              "i-0a0ee0ccff82aec8b",
              "i-0b625ef4d9ce0603b"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 6443,
                "instance_protocol": "tcp",
                "lb_port": 6443,
                "lb_protocol": "tcp"
              }
            ],
            "name": "udagram-cluster-api-lb",
            "security_groups": [
              "sg-0015b634dac6caec4",
              "sg-0c0b707d4f7cb5686"
            ],
            "source_security_group": "217408369779/udagram-cluster-api-lb",
            "source_security_group_id": "sg-0015b634dac6caec4",
            "subnets": [
              "subnet-0aaa2776480833f17",
              "subnet-0b4461af2783f6808",
              "subnet-0ee50aad5fb1c0631"
            ],
            "tags": {
              "Cluster": "udagram-cluster",
              "kubernetes.io/cluster/udagram-cluster": "shared"
            },
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_instance.control_plane",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.elb",
            "aws_subnet.public",
            "random_integer.cidr_block"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0db2f1da78295bc11",
            "arn": "arn:aws:ec2:us-west-2:217408369779:instance/i-0396100af51179734",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0396100af51179734",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "udagram-cluster-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0378383cd7558d1de",
            "private_dns": "ip-172-31-181-33.us-west-2.compute.internal",
            "private_ip": "172.31.181.33",
            "public_dns": "ec2-34-216-92-147.us-west-2.compute.amazonaws.com",
            "public_ip": "34.216.92.147",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0f0ac4980e65728bf",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "udagram-cluster-common",
              "udagram-cluster-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b4461af2783f6808",
            "tags": {
              "Cluster": "udagram-cluster",
              "Name": "udagram-cluster-bastion",
              "kubernetes.io/cluster/udagram-cluster": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-019f1e543b093717f",
              "sg-0c0b707d4f7cb5686"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.ssh",
            "aws_subnet.public",
            "random_integer.cidr_block"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "control_plane",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0db2f1da78295bc11",
            "arn": "arn:aws:ec2:us-west-2:217408369779:instance/i-0a0ee0ccff82aec8b",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "udagram-cluster-host",
            "id": "i-0a0ee0ccff82aec8b",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "udagram-cluster-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-09b91beca0dd143bd",
            "private_dns": "ip-172-31-181-158.us-west-2.compute.internal",
            "private_ip": "172.31.181.158",
            "public_dns": "ec2-34-215-213-137.us-west-2.compute.amazonaws.com",
            "public_ip": "34.215.213.137",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-05be8532400db92e4",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "udagram-cluster-common"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b4461af2783f6808",
            "tags": {
              "Name": "udagram-cluster-cp-1",
              "kubernetes.io/cluster/udagram-cluster": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c0b707d4f7cb5686"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_subnet.public",
            "random_integer.cidr_block"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0db2f1da78295bc11",
            "arn": "arn:aws:ec2:us-west-2:217408369779:instance/i-097f99b2e1981877a",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "udagram-cluster-host",
            "id": "i-097f99b2e1981877a",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "udagram-cluster-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-074d236aff64fbf5e",
            "private_dns": "ip-172-31-182-227.us-west-2.compute.internal",
            "private_ip": "172.31.182.227",
            "public_dns": "ec2-54-245-17-44.us-west-2.compute.amazonaws.com",
            "public_ip": "54.245.17.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0f80ceadf46bf5698",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "udagram-cluster-common"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ee50aad5fb1c0631",
            "tags": {
              "Name": "udagram-cluster-cp-2",
              "kubernetes.io/cluster/udagram-cluster": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c0b707d4f7cb5686"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_subnet.public",
            "random_integer.cidr_block"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0db2f1da78295bc11",
            "arn": "arn:aws:ec2:us-west-2:217408369779:instance/i-0b625ef4d9ce0603b",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "udagram-cluster-host",
            "id": "i-0b625ef4d9ce0603b",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "udagram-cluster-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-023c51c31f83212cb",
            "private_dns": "ip-172-31-183-161.us-west-2.compute.internal",
            "private_ip": "172.31.183.161",
            "public_dns": "ec2-34-215-127-171.us-west-2.compute.amazonaws.com",
            "public_ip": "34.215.127.171",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-030e63dcb7e99a970",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "udagram-cluster-common"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aaa2776480833f17",
            "tags": {
              "Name": "udagram-cluster-cp-3",
              "kubernetes.io/cluster/udagram-cluster": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c0b707d4f7cb5686"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_subnet.public",
            "random_integer.cidr_block"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "common",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:217408369779:security-group/sg-0c0b707d4f7cb5686",
            "description": "cluster common rules",
            "egress": [],
            "id": "sg-0c0b707d4f7cb5686",
            "ingress": [],
            "name": "udagram-cluster-common",
            "name_prefix": null,
            "owner_id": "217408369779",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cluster": "udagram-cluster",
              "kubernetes.io/cluster/udagram-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-371c874f"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:217408369779:security-group/sg-0015b634dac6caec4",
            "description": "kube-api firewall",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all outgoing traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0015b634dac6caec4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow anyone to connect to tcp/6443",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "udagram-cluster-api-lb",
            "name_prefix": null,
            "owner_id": "217408369779",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cluster": "udagram-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-371c874f"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:217408369779:security-group/sg-019f1e543b093717f",
            "description": "ssh access",
            "egress": [],
            "id": "sg-019f1e543b093717f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow incomming SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "udagram-cluster-ssh",
            "name_prefix": null,
            "owner_id": "217408369779",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cluster": "udagram-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-371c874f"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_allow_all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow all outgoing traffic",
            "from_port": 0,
            "id": "sgrule-1240898964",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c0b707d4f7cb5686",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.common"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_self_allow_all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "allow all incomming traffic from members of this group",
            "from_port": 0,
            "id": "sgrule-1365549573",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c0b707d4f7cb5686",
            "self": true,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.common"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodeports",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:217408369779:subnet/subnet-0b4461af2783f6808",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.31.181.0/24",
            "id": "subnet-0b4461af2783f6808",
            "map_public_ip_on_launch": true,
            "owner_id": "217408369779",
            "tags": {
              "Cluster": "udagram-cluster",
              "Name": "udagram-cluster-us-west-2a",
              "kubernetes.io/cluster/udagram-cluster": "shared"
            },
            "vpc_id": "vpc-371c874f"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "random_integer.cidr_block"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:217408369779:subnet/subnet-0ee50aad5fb1c0631",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.31.182.0/24",
            "id": "subnet-0ee50aad5fb1c0631",
            "map_public_ip_on_launch": true,
            "owner_id": "217408369779",
            "tags": {
              "Cluster": "udagram-cluster",
              "Name": "udagram-cluster-us-west-2b",
              "kubernetes.io/cluster/udagram-cluster": "shared"
            },
            "vpc_id": "vpc-371c874f"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "random_integer.cidr_block"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:217408369779:subnet/subnet-0aaa2776480833f17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "172.31.183.0/24",
            "id": "subnet-0aaa2776480833f17",
            "map_public_ip_on_launch": true,
            "owner_id": "217408369779",
            "tags": {
              "Cluster": "udagram-cluster",
              "Name": "udagram-cluster-us-west-2c",
              "kubernetes.io/cluster/udagram-cluster": "shared"
            },
            "vpc_id": "vpc-371c874f"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "random_integer.cidr_block"
          ]
        }
      ]
    }
  ]
}